worked on alignment stuff

--- a/StructuralAnalysisMethods.ipynb
+++ b/StructuralAnalysisMethods.ipynb
@@ -478,7 +478,9 @@
     "import prody\n",
     "import re\n",
     "import requests\n",
-    "import klab.bio.rcsb as ASDF\n",
+    "import klab.bio.rcsb as rcsb\n",
+    "import klab.bio.alignment as align\n",
+    "import klab.bio.pdb as PDB\n",
     "\n",
     "#From Kyle's Finalize.py\n",
     "def read_mutations_resfile(filenum_dir):\n",
@@ -575,29 +577,76 @@
     "            for hit in hits_dict:\n",
     "                temp_set.add(hit)\n",
     "            \n",
-    "            hit_list = hit_list.append(temp_set)\n",
+    "            hit_list.append(temp_set)\n",
     "            \n",
     "        common_set = hit_list[0]\n",
     "        \n",
     "        for entry in hit_list[1:]:\n",
-    "            common_set = common_set.intersection(entry)\n",
+    "            common_set.intersection_update(entry)\n",
     "        \n",
-    "        print common_set\n",
-    "        \n",
-    "#         for hit in hits:\n",
-    "#             ASDF.download_pdb(hit, output_dir)\n",
+    "        for hit in common_set:\n",
+    "            rcsb.download_pdb(hit, output_dir)\n",
     "            \n",
+    "    print common_set\n",
+    "    return pdb_file, common_set\n",
+    "\n",
+    "def alignments(pdb_file, common_set, pdbdir):\n",
+    "    for pdb_id in common_set:\n",
+    "        clustal(pdb_file, pdb_id, pdbdir)\n",
+    "    \n",
+    "#Shane's ClustalO code\n",
+    "def clustal(pdb_WT, pdb_taget, pdbdir):\n",
+    "    from klab.bio.clustalo import SequenceAligner\n",
+    "    from klab.bio.uniprot import UniParcEntry\n",
+    "    from klab.bio.basics import SubstitutionScore\n",
+    "    from klab import colortext\n",
+    "\n",
+    "    symbols = SubstitutionScore.clustal_symbols\n",
+    "\n",
+    "    pdb_id1 = pdb_WT\n",
+    "    p1 = PDB.PDB.from_filepath(os.path.join('/kortemmelab', 'james.lucas', '160322-james-backrub-rscript-full', 'data', pdbdir, '{0}.pdb'.format(pdb_id1[:-4])))\n",
+    "    chain1 = p1.seqres_sequences['A'] # a Sequence object\n",
+    "\n",
+    "    pdb_id2 = pdb_target\n",
+    "    p2 = PDB.PDB.from_filepath(os.path.join('/kortemmelab', 'james.lucas', 'Mutant_PDBs', 'structures', '{0}.pdb'.format(pdb_id2)))\n",
+    "    chain2 = p2.seqres_sequences['A'] # a Sequence object\n",
+    "\n",
+    "    sa = SequenceAligner()\n",
+    "    sa.add_sequence('{0}_{1}'.format(pdb_id1, 'A'), str(chain1))\n",
+    "    sa.add_sequence('{0}_{1}'.format(pdb_id2, 'A'), str(chain2))\n",
+    "    sa.align()\n",
+    "\n",
+    "    # Prints the raw ClustalO output (for debugging)\n",
+    "    colortext.message('\\nClustalO output')\n",
+    "    print(sa.alignment_output)\n",
+    "\n",
+    "    # Find all differing residues\n",
+    "    colortext.warning('Differing residues')\n",
+    "    print('{0} -> {1}'.format(pdb_id1, pdb_id2))\n",
+    "    resmap, clustal_matches = sa.get_residue_mapping()\n",
+    "    for first_idx, v in sorted(clustal_matches.iteritems()):\n",
+    "        # first_idx is an index into the first sequence, v is a SubstitutionScore object\n",
+    "        if symbols[v.clustal] != '*':\n",
+    "            # get the index into the second sequence\n",
+    "            second_idx = resmap[first_idx]\n",
+    "\n",
+    "            pdb_res1 = chain1.sequence[chain1.order[first_idx - 1]] # low-level access - there is probably a utility function to do this but I was hurrying\n",
+    "            pdb_res2 = chain2.sequence[chain2.order[second_idx - 1]]\n",
+    "            print('  {0} -> {1}'.format(pdb_res1, pdb_res2))\n",
+    "            \n",
+    "    print('')\n",
+    "    \n",
     "def main():\n",
     "    os.chdir('/kortemmelab/home/james.lucas/160322-james-backrub-rscript-full/data/')\n",
     "    cwd = os.getcwd()\n",
     "    print cwd\n",
     "    for pdbdir in os.listdir(cwd):\n",
     "        if os.path.isdir(pdbdir):\n",
-    "            get_PDBs(pdbdir)\n",
+    "            pdb_file, common_set = get_PDBs(pdbdir)\n",
+    "            alignments(pdb_file, common_set, pdbdir)\n",
     "        break\n",
     "        \n",
     "main()\n",
-    "\n",
     "\n",
     "# for subdir in directory(data):\n",
     "#   for files in subdir:\n",
@@ -622,12 +671,41 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "scrolled": false
    },
+   "outputs": [],
    "source": [
-    "## Kyle's RMSD Script "
+    "import klab.bio.alignment as asdf\n",
+    "import klab.bio.pdb as PDB\n",
+    "\n",
+    "\n",
+    "a = set(['a', 'b', 'c', 'd'])\n",
+    "b = set(['e', 'b', 'c', 'd'])\n",
+    "c = set(['e', 'f', 'c', 'd'])\n",
+    "\n",
+    "list = [a,b,c]\n",
+    "common_set = a\n",
+    "\n",
+    "for i in list[1:]:\n",
+    "    common_set.intersection_update(i)\n",
+    "\n",
+    "print common_set\n",
+    "\n",
+    "os.getcwd()\n",
+    "\n",
+    "asdf = open('59648/1TM1_EI.pdb')\n",
+    "pdb_strings = []\n",
+    "for line in asdf:\n",
+    "    pdb_strings.append(line.strip())\n",
+    "\n",
+    "mypdb = PDB.PDB.from_filepath('59648/1TM1_EI.pdb')\n",
+    "\n",
+    "print mypdb.pdb_id\n",
+    "print mypdb.seqres_sequences\n"
    ]
   },
   {
@@ -637,100 +715,16 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "#!/usr/bin/python\n",
-    "\n",
-    "program_description = \"Script to calculate pairwise RMSD of ensemble\"\n",
-    "\n",
-    "# Use pyRMSD for RMSD calculations if available as it's much faster than BioPython\n",
-    "try:\n",
-    "    import pyRMSD\n",
-    "    from pyRMSD.matrixHandler import MatrixHandler\n",
-    "    import pyRMSD.RMSDCalculator\n",
-    "    from pyRMSD.availableCalculators import availableCalculators\n",
-    "    # Use CUDA for GPU calculations, if avialable\n",
-    "    if 'QCP_CUDA_MEM_CALCULATOR' in availableCalculators():\n",
-    "        pyrmsd_calc = 'QCP_CUDA_MEM_CALCULATOR'\n",
-    "    else:\n",
-    "        pyrmsd_calc = 'QCP_SERIAL_CALCULATOR'\n",
-    "except ImportError:\n",
-    "    print 'Warning: could not import faster RMSD module. Falling back to slower biopython...'\n",
-    "    pyRMSD = None\n",
-    "    import Bio.PDB\n",
-    "    import Bio.PDB.Atom as Atom\n",
-    "\n",
-    "def calc_rms(ref_coords, alt_coords):\n",
-    "    # print ref_coords, alt_coords\n",
-    "    assert( len(ref_coords) == len(alt_coords) )\n",
-    "    if pyRMSD:\n",
-    "        calculator = pyRMSD.RMSDCalculator.RMSDCalculator(pyrmsd_calc, np.array([ref_coords, alt_coords]))\n",
-    "        return calculator.pairwiseRMSDMatrix()[0]\n",
-    "    else:\n",
-    "        super_imposer = Bio.PDB.Superimposer()\n",
-    "        ref_atoms = [Atom.Atom('CA', coords, 0.0, 1.0, '', ' CA ', i+1, element='C') for i, coords in enumerate(ref_coords)]\n",
-    "        alt_atoms = [Atom.Atom('CA', coords, 0.0, 1.0, '', ' CA ', i+1, element='C') for i, coords in enumerate(alt_coords)]\n",
-    "        super_imposer.set_atoms(ref_atoms, alt_atoms)\n",
-    "        return super_imposer.rms\n",
-    "\n",
-    "def main():\n",
-    "    parser = argparse.ArgumentParser(description=program_description)\n",
-    "\n",
-    "    parser.add_argument('-d', '--database_input',\n",
-    "                        nargs = '+',\n",
-    "                        help = 'Database to read coordinates from')\n",
-    "    parser.add_argument('-f', '--folder',\n",
-    "                        nargs = '+',\n",
-    "                        help = 'Folder to search for PDB files')\n",
-    "    parser.add_argument('-p', '--pdb_file',\n",
-    "                        nargs = '+',\n",
-    "                        help = 'PDB file to cluster')\n",
-    "    parser.add_argument('--single_thread',\n",
-    "                        default = False,\n",
-    "                        action = 'store_true',\n",
-    "                        help = 'Do not use multiprocessing')\n",
-    "\n",
-    "    args = parser.parse_args()\n",
-    "\n",
-    "    if args.single_thread:\n",
-    "        cpu_count = 1\n",
-    "    else:\n",
-    "        cpu_count = multiprocessing.cpu_count()\n",
-    "        pool = multiprocessing.Pool(cpu_count)\n",
-    "\n",
-    "    results_dict = {}\n",
-    "\n",
-    "    print 'Starting calculating RMS for all paths vs. all first fragments for each position'\n",
-    "    total_count = len(path_data)\n",
-    "    starting_time = time.time()\n",
-    "\n",
-    "    def helper_callback(outer_results):\n",
-    "        for results_tuple in outer_results:\n",
-    "            path_number, rms_results = results_tuple\n",
-    "            results_dict[path_number] = rms_results\n",
-    "\n",
-    "    path_nums_for_jobs = [[] for x in xrange(cpu_count)]\n",
-    "    path_coords_for_jobs = [[] for x in xrange(cpu_count)]\n",
-    "    for i, path_coords in enumerate([[anchor_points[x] for x in path] for path in path_data]):\n",
-    "        path_nums_for_jobs[ i%cpu_count ].append( i )\n",
-    "        path_coords_for_jobs[ i%cpu_count ].append( path_coords )\n",
-    "\n",
-    "    for path_nums_list, path_coords_list in zip(path_nums_for_jobs, path_coords_for_jobs):\n",
-    "        if args.single_thread:\n",
-    "            helper_callback( paths_against_all_fragments(path_nums_list, path_coords_list, starting_time, total_count, path_length) )\n",
-    "        else:\n",
-    "            pool.apply_async(paths_against_all_fragments, (path_nums_list, path_coords_list, starting_time, total_count, path_length), callback=helper_callback)\n",
-    "\n",
-    "    if not args.single_thread:\n",
-    "        pool.close()\n",
-    "        pool.join()\n",
-    "\n",
-    "    n = int(reporter_n.value)\n",
-    "    completion_time = time.time()\n",
-    "    print 'Finished! Processed %d %s, took %.3f seconds\\n' % (n, 'paths', completion_time-starting_time)\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
