--- a/StructuralAnalysisMethods.ipynb
+++ b/StructuralAnalysisMethods.ipynb
@@ -467,12 +467,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "576,1EMV_AB.pdb,B F  86 A,2vlq\n",
+      "\n",
+      "572,1EMV_AB.pdb,B N  75 A,2vln\n",
+      "\n",
+      "579,1EMV_AB.pdb,B K  97 A,2vlo\n",
+      "\n",
+      "569,1EMV_AB.pdb,B R  54 A,2vlp\n",
+      "\n",
+      "1125,1EMV_AB.pdb,A D  51 A,2gyk\n",
+      "\n",
+      "1125,1EMV_AB.pdb,A D  51 A,2gyk\n",
+      "\n",
+      "1125,1EMV_AB.pdb,A D  51 A,2gzj\n",
+      "\n",
+      "1125,1EMV_AB.pdb,A D  51 A,2gzj\n",
+      "\n",
+      "1111,1EMV_AB.pdb,A V  34 A,2gzi\n",
+      "\n",
+      "1129,1EMV_AB.pdb,A Y  55 A,2gze\n",
+      "\n",
+      "1116,1EMV_AB.pdb,A E  41 A,1fr2\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import prody\n",
@@ -481,6 +510,7 @@
     "import klab.bio.rcsb as rcsb\n",
     "import klab.bio.alignment as align\n",
     "import klab.bio.pdb as PDB\n",
+    "import pandas as pd\n",
     "\n",
     "#From Kyle's Finalize.py\n",
     "def read_mutations_resfile(filenum_dir):\n",
@@ -540,15 +570,10 @@
     "                chain_string = chain_string + mutation_dict[str(residue.getResnum()) + str(residue.getChid())]\n",
     "        blast_dict[chain.getChid()] = chain_string\n",
     "    \n",
-    "    for i in blast_dict:\n",
-    "        print blast_dict[i]\n",
-    "        \n",
     "    return blast_dict\n",
     "\n",
     "def get_PDBs(pdbdir):\n",
     "    skip_blast = False\n",
-    "    \n",
-    "    print pdbdir\n",
     "    \n",
     "    for pdb_file in os.listdir(pdbdir):\n",
     "        if pdb_file.endswith('.pdb'):\n",
@@ -557,127 +582,155 @@
     "                os.makedirs(output_dir)        \n",
     "            except:\n",
     "                print 'File directory %s already exists!!!' % pdb_file[:-4]\n",
-    "                #skip_blast = True\n",
-    "            \n",
+    "                \n",
     "            pdb_chains = re.split(r'_', pdb_file)[1][:-4]\n",
     "            pdb_id = re.split(r'_', pdb_file)[0]\n",
     "            hv = prody.parsePDB(os.path.join(pdbdir, pdb_file)).getHierView()\n",
     "            \n",
-    "    if skip_blast == True:\n",
-    "        skip_blast = False\n",
-    "        \n",
-    "    else:\n",
-    "        blast_dict = generate_mut_seq(pdbdir, hv)\n",
-    "        hit_list = []\n",
-    "        for sequence in blast_dict:\n",
-    "            set_dict = {}\n",
-    "            temp_set = set()\n",
-    "            blast_me = prody.blastPDB(blast_dict[sequence])\n",
-    "            hits_dict = blast_me.getHits(percent_identity=95)\n",
-    "            for hit in hits_dict:\n",
-    "                temp_set.add(hit)\n",
+    "            blast_dict = generate_mut_seq(pdbdir, hv)\n",
+    "            hit_list = []\n",
+    "            for sequence in blast_dict:\n",
+    "                set_dict = {}\n",
+    "                temp_set = set()\n",
+    "                blast_me = prody.blastPDB(blast_dict[sequence])\n",
+    "                hits_dict = blast_me.getHits(percent_identity=95)\n",
+    "                for hit in hits_dict:\n",
+    "                    temp_set.add(hit)\n",
+    "\n",
+    "                hit_list.append(temp_set)\n",
+    "\n",
+    "            common_set = hit_list[0]\n",
+    "\n",
+    "            for entry in hit_list[1:]:\n",
+    "                common_set.intersection_update(entry)\n",
+    "\n",
+    "            for hit in common_set:\n",
+    "                rcsb.download_pdb(hit, output_dir)\n",
     "            \n",
-    "            hit_list.append(temp_set)\n",
-    "            \n",
-    "        common_set = hit_list[0]\n",
-    "        \n",
-    "        for entry in hit_list[1:]:\n",
-    "            common_set.intersection_update(entry)\n",
-    "        \n",
-    "        for hit in common_set:\n",
-    "            rcsb.download_pdb(hit, output_dir)\n",
-    "            \n",
-    "    print common_set\n",
-    "    return pdb_file, common_set\n",
+    "    return pdb_file, common_set, blast_dict\n",
     "\n",
     "def alignments(pdb_file, common_set, pdbdir):\n",
     "    for pdb_id in common_set:\n",
     "        clustal(pdb_file, pdb_id, pdbdir)\n",
-    "    \n",
+    "\n",
     "#Shane's ClustalO code\n",
-    "def clustal(pdb_WT, pdb_taget, pdbdir):\n",
+    "def clustal(pdb_WT, pdb_target, pdbdir):\n",
+    "    import pprint\n",
     "    from klab.bio.clustalo import SequenceAligner\n",
     "    from klab.bio.uniprot import UniParcEntry\n",
-    "    from klab.bio.basics import SubstitutionScore\n",
+    "    from klab.bio.basics import SubstitutionScore, PDBResidue\n",
     "    from klab import colortext\n",
-    "\n",
+    "    \n",
     "    symbols = SubstitutionScore.clustal_symbols\n",
+    "    \n",
+    "    wt_pdb_path = os.path.join('/kortemmelab', 'home', 'james.lucas', '160322-james-backrub-rscript-full', 'data', pdbdir, \n",
+    "                                            '{0}.pdb'.format(pdb_WT[:-4]))\n",
     "\n",
-    "    pdb_id1 = pdb_WT\n",
-    "    p1 = PDB.PDB.from_filepath(os.path.join('/kortemmelab', 'james.lucas', '160322-james-backrub-rscript-full', 'data', pdbdir, '{0}.pdb'.format(pdb_id1[:-4])))\n",
-    "    chain1 = p1.seqres_sequences['A'] # a Sequence object\n",
-    "\n",
-    "    pdb_id2 = pdb_target\n",
-    "    p2 = PDB.PDB.from_filepath(os.path.join('/kortemmelab', 'james.lucas', 'Mutant_PDBs', 'structures', '{0}.pdb'.format(pdb_id2)))\n",
-    "    chain2 = p2.seqres_sequences['A'] # a Sequence object\n",
+    "    p1 = PDB.PDB.from_filepath(wt_pdb_path)\n",
+    "    p2 = PDB.PDB.from_filepath(os.path.join('/kortemmelab', 'home', 'james.lucas', 'Mutant_PDBs', pdb_WT[:-4], '{0}.pdb'.format(pdb_target)))\n",
     "\n",
     "    sa = SequenceAligner()\n",
-    "    sa.add_sequence('{0}_{1}'.format(pdb_id1, 'A'), str(chain1))\n",
-    "    sa.add_sequence('{0}_{1}'.format(pdb_id2, 'A'), str(chain2))\n",
+    "    for chain_id, seq in (p1.seqres_sequences or p1.atom_sequences).iteritems():\n",
+    "        sa.add_sequence('{0}_{1}'.format(pdb_WT[:-4], chain_id), str(seq))\n",
+    "    for chain_id, seq in p2.seqres_sequences.iteritems():\n",
+    "        sa.add_sequence('{0}_{1}'.format(pdb_target, chain_id), str(seq))\n",
     "    sa.align()\n",
-    "\n",
+    "    \n",
     "    # Prints the raw ClustalO output (for debugging)\n",
-    "    colortext.message('\\nClustalO output')\n",
-    "    print(sa.alignment_output)\n",
+    "    #colortext.message('\\nClustalO output')\n",
+    "    #print(sa.alignment_output)\n",
     "\n",
     "    # Find all differing residues\n",
-    "    colortext.warning('Differing residues')\n",
-    "    print('{0} -> {1}'.format(pdb_id1, pdb_id2))\n",
-    "    resmap, clustal_matches = sa.get_residue_mapping()\n",
-    "    for first_idx, v in sorted(clustal_matches.iteritems()):\n",
-    "        # first_idx is an index into the first sequence, v is a SubstitutionScore object\n",
-    "        if symbols[v.clustal] != '*':\n",
-    "            # get the index into the second sequence\n",
-    "            second_idx = resmap[first_idx]\n",
-    "\n",
-    "            pdb_res1 = chain1.sequence[chain1.order[first_idx - 1]] # low-level access - there is probably a utility function to do this but I was hurrying\n",
-    "            pdb_res2 = chain2.sequence[chain2.order[second_idx - 1]]\n",
-    "            print('  {0} -> {1}'.format(pdb_res1, pdb_res2))\n",
+    "                    \n",
+    "    for chain_id_WT, seq_WT in (p1.seqres_sequences or p1.atom_sequences).iteritems():\n",
+    "        best_match_dict = sa.get_best_matches_by_id( '%s_%s' %(pdb_WT[:-4], chain_id_WT), cut_off = 90.0)\n",
+    "        \n",
+    "        for best_match_pdb in best_match_dict.keys():\n",
+    "            sa2 = SequenceAligner()\n",
+    "            sa2.add_sequence('{0}_{1}'.format(pdb_WT[:-4], chain_id_WT), str(seq_WT))\n",
+    "            sa2.add_sequence('{0}_{1}'.format(best_match_pdb[:-2], best_match_pdb[-1:]), str(p2.seqres_sequences[best_match_pdb[-1:]]))\n",
+    "            asddfasdf=p2.seqres_sequences[best_match_pdb[-1:]]\n",
+    "            sa2.align()\n",
+    "            #colortext.warning('Differing residues')\n",
+    "            #print('{0}_{1} -> {2}'.format(pdb_WT[:-4],chain_id_WT, best_match_pdb))\n",
+    "            resmap, clustal_matches = sa2.get_residue_mapping()\n",
     "            \n",
-    "    print('')\n",
+    "            #print clustal_matches\n",
+    "            raw_mut_list = []\n",
+    "            for first_idx, v in sorted(clustal_matches.iteritems()):\n",
+    "                # first_idx is an index into the first sequence, v is a SubstitutionScore object\n",
+    "                if symbols[v.clustal] != '*':\n",
+    "                    # get the index into the second sequence\n",
+    "                    second_idx = resmap[first_idx]\n",
+    "\n",
+    "                    pdb_res1 = seq_WT.sequence[seq_WT.order[first_idx - 1]] # low-level access - there is probably a utility function to do this but I was hurrying\n",
+    "                    pdb_res2 = asddfasdf.sequence[asddfasdf.order[second_idx - 1]]\n",
+    "                    #print('  {0} -> {1}'.format(super(PDBResidue, pdb_res1).__repr__(), pdb_res2))\n",
+    "                    \n",
+    "                    raw_mut_list.append('  {0} -> {1}'.format(super(PDBResidue, pdb_res1).__repr__(), pdb_res2))\n",
+    "            mut_list_interpreter(raw_mut_list, pdb_WT, pdb_target)\n",
+    "\n",
+    "#Takes list of mutation strings and converts it into mutations format\n",
+    "#If there is a 100% match in df, add remark in a new column with matched PDBID\n",
+    "def mut_list_interpreter(formatted_mut_list, pdb_WT, pdb_target):\n",
+    "    mut_string_temp = ''\n",
+    "    for element in formatted_mut_list:\n",
+    "        split_input = re.split(':| ', element.strip())\n",
+    "        residue_position = '    ' + split_input[1]\n",
+    "        mut_string_temp = mut_string_temp + '%s %s%s %s; ' %(split_input[0], split_input[2], residue_position[-4:], split_input[6])\n",
+    "    mut_string = mut_string_temp[:-2]\n",
     "    \n",
+    "    output = open('/kortemmelab/home/james.lucas/Mutant_PDBs/Resfile_Mutations_Completed.txt', 'a')\n",
+    "    df = pd.read_csv('/kortemmelab/home/james.lucas/Mutant_PDBs/Resfile_Mutations.csv')\n",
+    "    for index, row in df.iterrows():\n",
+    "        if row[1].strip()== mut_string: \n",
+    "            if pdb_WT[:4] == row[2].strip():\n",
+    "                output.write('%s,%s,%s,%s\\n' % (row[0], pdb_WT, row[1], pdb_target) )\n",
+    "                print '%s,%s,%s,%s\\n' % (row[0], pdb_WT, row[1], pdb_target)\n",
+    "            \n",
     "def main():\n",
     "    os.chdir('/kortemmelab/home/james.lucas/160322-james-backrub-rscript-full/data/')\n",
     "    cwd = os.getcwd()\n",
-    "    print cwd\n",
+    "    output = open('/kortemmelab/home/james.lucas/Mutant_PDBs/Resfile_Mutations_Completed.txt', 'w')\n",
+    "    output.write('DatasetID,Mutations,PDBFileID,Matches\\n')\n",
     "    for pdbdir in os.listdir(cwd):\n",
     "        if os.path.isdir(pdbdir):\n",
-    "            pdb_file, common_set = get_PDBs(pdbdir)\n",
+    "            try:\n",
+    "                pdb_file, common_set = get_PDBs(pdbdir)\n",
+    "            except:\n",
+    "                print 'ERROR!!!'\n",
     "            alignments(pdb_file, common_set, pdbdir)\n",
-    "        break\n",
-    "        \n",
-    "main()\n",
-    "\n",
-    "# for subdir in directory(data):\n",
-    "#   for files in subdir:\n",
-    "#   mutlist = []\n",
-    "#   if file == 'mutations.resfile':\n",
-    "#       mut_type = mutant residue type\n",
-    "#       mut_pos = mutant residue position\n",
-    "#       mutlist.append([mut_type, mut_pos])\n",
-    "#   if file ends in '.pdb':\n",
-    "#       structure = parser.get_structure('TEST', data + subdir + files)\n",
-    "#       pdbcode = take the first four letters of filename.pdb\n",
-    "\n",
-    "#   #Find related structures using PyPDB module make_query()\n",
-    "#   MSQuery = pypdb.make_query(pdbcode, querytype = 'ModifiedStructuresQuery')\n",
-    "\n",
-    "#   #Obtain PDB sequence, introduce mutations, and search against PDB\n",
-    "#   ppb=CaPPBuilder()\n",
-    "#   for pp in ppb.build_peptides(structure): \n",
-    "#       print pp.get_sequence()\n",
-    "#   seq = polypeptide.get_sequence()\n",
-    "#   search_PDB_for_sequence(seq)"
+    "                \n",
+    "main()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set(['c', 'd'])\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-9d692af37fab>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[0mcommon_set\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetcwd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[0masdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'59648/1TM1_EI.pdb'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'os' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import klab.bio.alignment as asdf\n",
     "import klab.bio.pdb as PDB\n",
