Adding all changes made on guybrush for: 1. Addition of RosettaOut_Parser-BU: Parses rosetta.out files with bound/unbound scores. Sorts based on bound rosetta energy scores and then calculates interface DDGs + adds to fattydict which is reurned in parse_rosetta_out() 2. PDB_Mutant_Scraper srapes mutant PDBs and records results in a csv file 3. Just updates for the normal notebooks

--- a/DDG_Code.ipynb
+++ b/DDG_Code.ipynb
@@ -30,12 +30,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "MissingPythonDependencyError",
+     "evalue": "Install NumPy if you want to use the PDB parser.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mMissingPythonDependencyError\u001b[0m              Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-7a0bae41805b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mre\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mBio\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mPDB\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mdatetime\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/home/james.lucas/anaconda2/lib/python2.7/site-packages/Bio/PDB/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;31m# Get a Structure object from a PDB file\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0mPDBParser\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPDBParser\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/home/james.lucas/anaconda2/lib/python2.7/site-packages/Bio/PDB/PDBParser.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[1;32mfrom\u001b[0m \u001b[0mBio\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mMissingPythonDependencyError\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m     raise MissingPythonDependencyError(\n\u001b[1;32m---> 17\u001b[1;33m         \"Install NumPy if you want to use the PDB parser.\")\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mBio\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mFile\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mas_handle\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mMissingPythonDependencyError\u001b[0m: Install NumPy if you want to use the PDB parser."
+     ]
+    }
+   ],
    "source": [
     "#Modified SubmitRun_DDG_Zemu_General.py for local troubleshooting of DDG_Test.xml\n",
     "#3/26/16\n",
