--- a/RotationNotebook.v1.ipynb
+++ b/RotationNotebook.v1.ipynb
@@ -135,6 +135,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## April 25, 2016\n",
+    "\n",
+    "Start thinking seriously about dissertation projects\n",
+    "\n",
+    "* Multistate enzyme design\n",
+    "    * Samuel's project with the (asdf)?\n",
+    "    * GEF/GAP in line with Pardeep's/Tina's stuff\n",
+    "    * Mutating (asdf) to see how far in sequence identity we can go\n",
+    "    * Different enzyme system (GEF/GAP) (see Lim paper)\n",
+    "* Biosensors\n",
+    "    * Designing new pocket for A-B dimer\n",
+    "    * Design \n",
+    "* Amino acid positioning\n",
+    "    * Kale's enzyme thing\n",
+    "    * Cripsr/Cas9 PAM sequence identification\n",
+    "    \n",
+    "Add a filter to remove clashing structures from runs\n",
+    "Look into clashing structures to see what exactly is happening and where\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
