--- a/StructuralAnalysisMethods.ipynb
+++ b/StructuralAnalysisMethods.ipynb
@@ -577,6 +577,7 @@
     "    \n",
     "    for pdb_file in os.listdir(pdbdir):\n",
     "        if pdb_file.endswith('.pdb'):\n",
+    "            actual_pdb_file = pdb_file\n",
     "            output_dir = os.path.join('/kortemmelab/home/james.lucas/Mutant_PDBs', pdb_file[:-4])\n",
     "            try:\n",
     "                os.makedirs(output_dir)        \n",
@@ -607,7 +608,7 @@
     "            for hit in common_set:\n",
     "                rcsb.download_pdb(hit, output_dir)\n",
     "            \n",
-    "    return pdb_file, common_set, blast_dict\n",
+    "    return actual_pdb_file, common_set\n",
     "\n",
     "def alignments(pdb_file, common_set, pdbdir):\n",
     "    for pdb_id in common_set:\n",
@@ -695,10 +696,7 @@
     "    output.write('DatasetID,Mutations,PDBFileID,Matches\\n')\n",
     "    for pdbdir in os.listdir(cwd):\n",
     "        if os.path.isdir(pdbdir):\n",
-    "            try:\n",
-    "                pdb_file, common_set = get_PDBs(pdbdir)\n",
-    "            except:\n",
-    "                print 'ERROR!!!'\n",
+    "            pdb_file, common_set = get_PDBs(pdbdir)\n",
     "            alignments(pdb_file, common_set, pdbdir)\n",
     "                \n",
     "main()"
